# fastapi-template

./: .dockerignore  .env.local.sample  .env.sample  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Justfile  Makefile  README.md  alembic.ini  docker-compose.prefect.yml  docker-compose.registry.yml  docker-compose.yml  dockerfile  prefect.yaml  prek.toml  pyproject.toml
.github/: main-protection-ruleset.json
.github/workflows/: build-images.yml  ci.yml  release.yml  tests.yml
alembic/: env.py
alembic/versions/: 23ef48847d52_init.py  28a975b09a5b_add_unique_constraint_on_users_clerk_id.py  9d74b085fa57_init.py  cdd2b263cbf3_init.py
app/: admin.py  config.py  database.py  main.py  router.py  security.py
app/api/: dependencies.py  exceptions.py  main.py  rate_limit.py  router.py  security.py
app/api/routes/: health.py  users.py
app/api/routes/webhooks/: __init__.py  clerk.py
app/core/: admin.py  authorization.py  dependencies.py  exceptions.py  factory.py  filters.py  models.py  repository.py  schemas.py  service.py
app/domains/: __init__.py
app/domains/base/: authorization.py  exceptions.py  factory.py  filters.py  models.py  repository.py  schemas.py  service.py
app/domains/users/: authorization.py  exceptions.py  factory.py  filters.py  models.py  repository.py  schemas.py  service.py
app/infrastructure/: config.py  database.py  logging_config.py  middleware.py  observability.py  security.py
app/infrastructure/adapters/: clerk.py
app/scripts/: generate_user.py  init_prefect.py  serve_flows.py  setup_prefect.py  work_pool_template.json
app/user/: admin.py  authorization.py  dependencies.py  exceptions.py  factory.py  models.py  repository.py  router.py  schemas.py  service.py
app/workers/: __init__.py  main.py  task_database.py  task_example.py
app/workers/flows/: __init__.py  example.py  web_scrapper.py
app/workers/tasks/: __init__.py  database.py  example.py
migrations/: env.py
scripts/: populate_database.py
tests/: conftest.py  test_config.py  test_health.py
tests/core/: conftest.py  models.py
tests/core/repository/: test_repository_bulk_create.py  test_repository_bulk_delete.py  test_repository_bulk_update.py  test_repository_create.py  test_repository_delete.py  test_repository_get_all.py  test_repository_get_all_paginated.py  test_repository_get_by_id.py  test_repository_update.py
tests/core/service/: test_service_bulk_create.py  test_service_bulk_delete.py  test_service_bulk_update.py  test_service_create.py  test_service_delete.py  test_service_get_by_id.py  test_service_get_paginated.py  test_service_prepare_create_data.py  test_service_prepare_update_data.py  test_service_update.py  test_service_validate_create.py  test_service_validate_update.py  test_validate_bulk_delete.py
tests/security/: test_auth_instance.py  test_get_current_admin_user.py  test_get_current_manager_user.py  test_get_current_user.py  test_integration.py  test_unauthenticated_exception.py  test_unauthorized_exception.py  test_verify_auth.py
tests/users/: test_user_authorization_adapter.py  test_user_dependencies.py  test_user_scope_strategy.py
tests/users/api/: test_api_api_key.py  test_api_create_user.py  test_api_delete_user.py  test_api_get_me.py  test_api_retrieve_user.py  test_api_update_me.py  test_api_update_user.py  test_retrieve_users.py
tests/users/repository/: test_user_repository_filters.py  test_user_repository_find_by_clerk_id.py  test_user_repository_find_by_email.py
tests/users/service/: test_api_key_service_check_permissions.py  test_clerk_service_check_clerk_id.py  test_clerk_service_create_user.py  test_clerk_service_delete_user.py  test_clerk_service_extract_primary_email.py  test_clerk_service_update_user.py  test_user_service_check_general_permissions.py  test_user_service_check_instance_permissions.py  test_user_service_find_by_clerk_id.py  test_user_service_find_by_email.py
tests/utils/: address.py  member.py  override_dependencies.py
tests/validations/: validation_users.py
tests/webhooks/: test_clerk_webhook_signature.py
var/db/: clean_all_tables.sql  create_database.sql
