[project]
name = "fastapi-template"
version = "0.1.0"
description = "FastAPI Template"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.2.0",
    "boto3>=1.35.57",
    "email-validator>=2.2.0",
    "factory-boy>=3.3.1",
    "faker>=30.8.2",
    "fastapi-cli>=0.0.5",
    "fastapi>=0.115.4",
    "greenlet>=3.1.1",
    "httpx>=0.27.2",
    "itsdangerous>=2.2.0",
    "phonenumbers>=8.13.49",
    "psycopg2>=2.9.10",
    "pycountry>=24.6.1",
    "pydantic-extra-types>=2.10.0",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.9.2",
    "pyjwt[crypto]>=2.9.0",
    "pylyzer>=0.0.70",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "python-jose>=3.3.0",
    "ruff>=0.7.3",
    "sqladmin>=0.20.1",
    "sqlalchemy-utils>=0.41.2",
    "sqlalchemy>=2.0.36",
    "trio>=0.27.0",
    "uvicorn>=0.32.0",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
