[project]
name = "fastapi-template"
version = "0.4.0-rc.1"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "factory-boy>=3.3.3",
    "faker>=40.1.0",
    "fastapi[standard]>=0.128.0",
     "prefect>=3.6.10",
    "prefect-sqlalchemy>=0.5.3",
    "pydantic-settings>=2.12.0",
    "pydantic[email,timezone]>=2.12.5",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.45",
    "sqlalchemy-utils>=0.42.1",
]

[build-system]
# Needed so uv can build the project in editable mode (to expose [project.scripts]).
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.setuptools]
# IMPORTANT: Explicitly limit package discovery to `app` only.
# This avoids setuptools trying to treat `alembic/` and `var/` as top-level packages.

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "var*"]

[dependency-groups]
dev = [
    "asyncpg>=0.31.0",
    "pyjwt>=2.11.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "python-semantic-release>=9.17.0",
    "ruff>=0.14.11",
    "ty>=0.0.10",
]


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]

[tool.ty.src]
include = ["app"]
exclude = ["app/scripts/*"]

[project.scripts]
generate-user = "app.scripts.generate_user:cli"
init-prefect = "app.scripts.init_prefect:cli"

# =============================================================================
# Python Semantic Release Configuration
# =============================================================================
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_message = "chore(release): {version}"
tag_format = "v{version}"
build_command = ""

# Prerelease (RC) configuration for main branch
[tool.semantic_release.branches.main]
match = "main"
prerelease = true
prerelease_token = "rc"

# Changelog generation
[tool.semantic_release.changelog]
exclude_commit_patterns = []

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

# Don't auto-detect version from commits (manual control)
[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
